--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "plotly.js": "^2.25.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-plotly.js": "^2.6.0",
     "tailwindcss": "3.3.3"
   }
 }
